work on placeholder contact page

--- a/.gitignore
+++ b/.gitignore
@@ -13,4 +13,6 @@
 .history
 .ionide
 
+# Hide environmental variables
+.env
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode
